--- a/m2/w1/d3/hw/cube/css/style.css
+++ b/m2/w1/d3/hw/cube/css/style.css
@@ -34,6 +34,7 @@ body {
     width: 300px;
     transform-style: preserve-3d;
     position: relative;
+    transform: rotateX(90deg);
     
     
     
@@ -48,6 +49,7 @@ body {
 .cubo img {
     
     transform: translateZ(0);
+    
 }
 
 .front {
