--- a/m2/w2/d2/sass/css/style.css
+++ b/m2/w2/d2/sass/css/style.css
@@ -1,4 +1,4 @@
-/* line 1, ../../Users/caris/Desktop/fs0422-Carisio-Di-Giampietro/m2/w2/d2/sass/scss/style.scss */
+/* line 1, X:/lavoro/epicode/epicode/wd0422/m2/w2/d2/sass/scss/style.scss */
 h1 {
   color: red;
 }
