--- a/m2/w2/d5/progetto/scss/_main.scss
+++ b/m2/w2/d5/progetto/scss/_main.scss
@@ -1,10 +1,11 @@
 *,
 a {
-    @include font("family", "Didact Gothic")
+    @include font("family", "Didact Gothic");
+    
 }
 
 .topTitle {
-    @include font("family", "Mochiy Pop One")
+    @include font("family", "Mochiy Pop One");
 }
 
 
