--- a/m2/w2/d5/progetto/scss/_pricing.scss
+++ b/m2/w2/d5/progetto/scss/_pricing.scss
@@ -2,6 +2,7 @@
 .row{
     --bs-gutter-x: -1.5rem;
 }
+max-width: 100%;
 }
 #baobab{
     background-image: url(../images/alberi_price/BAOBAB.jpg);
@@ -18,4 +19,5 @@
     z-index: 10;
     background-size:cover ;
 }
+
 
