--- a/m2/w2/d5/progetto/scss/_pricing.scss
+++ b/m2/w2/d5/progetto/scss/_pricing.scss
@@ -1,4 +1,4 @@
-#price{
+/* #price{
 .row{
     --bs-gutter-x: -1.5rem;
 }
@@ -20,4 +20,4 @@ max-width: 100%;
     background-size:cover ;
 }
 
-
+ */
