--- a/m2/w2/d5/progetto/scss/app.scss
+++ b/m2/w2/d5/progetto/scss/app.scss
@@ -3,7 +3,7 @@
 @import 'function';
 
 @import '../node_modules/bootstrap/scss/bootstrap.scss';
-
+@import 'animation';
 @import 'header';
 @import 'main';
 @import 'pricing';
