--- a/m3/w2/d2/angular1/src/app/app.component.html
+++ b/m3/w2/d2/angular1/src/app/app.component.html
@@ -1,8 +1,3 @@
-<div *ngFor="let utente of utenti" class="card" style="width: 18rem;">
-  <img src="..." class="card-img-top" alt="...">
-  <div class="card-body">
-    <h5 class="card-title">Card title</h5>
-    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-    <a [routerLink]="'/utente', utente.id" class="btn btn-primary">Go somewhere</a>
-  </div>
-</div>
+<app-header></app-header>
+
+<app-footer></app-footer>
