--- a/m3/w2/d2/angular1/src/app/pages/utenti-card/utenti-card.component.html
+++ b/m3/w2/d2/angular1/src/app/pages/utenti-card/utenti-card.component.html
@@ -5,3 +5,4 @@
     <p class="card-text">{{utente.email}}</p>
     <a [routerLink]="['/utenti',utente.id]" class="btn btn-primary">Go somewhere</a>
   </div>
+</div>
