--- a/m3/w2/d3/angular1/src/app/app.component.html
+++ b/m3/w2/d3/angular1/src/app/app.component.html
@@ -1,8 +1,71 @@
 <div class="container">
-<app-form (onNewUserCreated)="addUser($event)"></app-form>
-  <div class="col-6">
-    <app-table [allItems]="allUsers" ></app-table>
+  <div class="row">
+    <div class="col-6">
+      <app-form (onNewUserCreated)="addUser($event)"></app-form>
+    </div>
+    <div class="col-6">
+      <app-table [allItems]="allUsers"></app-table>
+    </div>
   </div>
 </div>
+<hr>
+<button (click)="visible = !visible">Crea/distruggi</button>
+<button (click)="visibleCss = !visibleCss">Mostra nascondi</button>
+<app-prova-destroy *ngIf="visible" [style.visibility]="visibleCss ? 'visible':'hidden'"></app-prova-destroy>
+<hr>
+<h1>Content projection singola</h1>
 
-<!-- per passare dati dal parent a child usiamo una proprietà e un metodo e un evento insieme viceversa -->
+<div class="accordion" id="accordionExample">
+  <div class="accordion-item">
+    <h2 class="accordion-header" id="headingOne">
+      <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+        Accordion Item #1
+      </button>
+    </h2>
+    <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+      <div class="accordion-body accordion-body-component">
+        <strong>This is the first item's accordion body.</strong> It is shown by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+      </div>
+    </div>
+  </div>
+  <div class="accordion-item">
+    <h2 class="accordion-header" id="headingTwo">
+      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+        Accordion Item #2
+      </button>
+    </h2>
+    <div id="collapseTwo" class="accordion-collapse collapse show" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
+      <div class="accordion-body accordion-body-component">
+        Questo contenuto sarà inserito all'interno dell'HTML del componente accordio body
+        in corrispondenza della posizione del tag ng-content
+      </div>
+    </div>
+  </div>
+  <div class="accordion-item">
+    <h2 class="accordion-header" id="headingThree">
+      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+        Accordion Item #3
+      </button>
+    </h2>
+    <div id="collapseThree" class="accordion-collapse collapse show" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
+      <div class="accordion-body accordion-body-component">
+        <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+      </div>
+    </div>
+  </div>
+</div>
+<hr>
+<h2>Content projection multipla</h2>
+<div class="mt-5" class="accordion" id="accordionExample">
+  <app-accordion-section [itemId]="'element1'">
+    <div titolo>Accordion Item #1</div>
+    <div corpo>This is the third item's accordion body. It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the .accordion-body, though the transition does limit overflow.</div>
+  </app-accordion-section>
+  <app-accordion-section [itemId]="'element2'">
+    <div titolo>Accordion Item #2</div>
+    <div corpo>{{allUsers | json}}</div>
+  </app-accordion-section>
+</div>
+
+<button (click)="log()">Fai log</button>
+<div #pippo>dfssdffdsfds</div>
