--- a/m3/w2/d3/angular1/src/app/table/table.component.html
+++ b/m3/w2/d3/angular1/src/app/table/table.component.html
@@ -1,13 +1,12 @@
 <table class="table">
   <tr>
     <th>#</th>
-    <th *ngFor="let prop of props" >{{prop}}</th>
-    <th>cognome</th>
+    <th *ngFor="let prop of props">{{prop}}</th>
   </tr>
-  <tr *ngFor="let user of allItems; let i=index" >
-    <td>{{i+1}}</td>
+  <tr *ngFor="let user of allItems; let i = index">
+    <td>{{i + 1}}</td>
     <td>{{user.name}}</td>
     <td>{{user.lastname}}</td>
-    <td><button class="btn btn-danger text-black">elimina</button></td>
+    <td><button class="btn btn-danger">Elimina</button></td>
   </tr>
 </table>
