--- a/m3/w2/d5/project/src/app/main/header/header.component.html
+++ b/m3/w2/d5/project/src/app/main/header/header.component.html
@@ -4,8 +4,8 @@
 <div class="toolbar" role="banner">
  <nav class="navMenu">
   <a [routerLink]="['/']" >Home</a>
-  <a [routerLink]="['/newtodo']" >New Todo</a>
-  <a  >About</a><!-- rick roll -->
+  <a id="tiprego" [routerLink]="['/newtodo']" >New Todo</a>
+  <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank" >About</a><!-- rick roll -->
   <div class="dot"></div>
 </nav>
 </div>
