--- a/m3/w2/d5/project/src/app/pages/home/newtodo/newtodo.component.scss
+++ b/m3/w2/d5/project/src/app/pages/home/newtodo/newtodo.component.scss
@@ -35,9 +35,17 @@
 
   input {
     color: rgb(0, 0, 0);
+    margin-top: 0.5rem;
+    padding : 1rem ;
+    text-align: center;
   }
-}
 
+}
+textarea{
+  margin-top: 0.5rem;
+  padding : 1rem ;
+  text-align: center;
+  }
 .login-form {
   margin: 0 auto;
   margin-top: 3rem;
@@ -64,7 +72,7 @@
   }
 
   .btn {
-    width: 100%;
+    width: 50%;
     margin: 18px 0 9px 0;
   }
 }
